src/components/creators/cards/StakerRewardInfoCard.module.sass
@import 'src/styles/subsocial-vars.scss'

.StakerRewardInfoCard
  display: flex
  flex-direction: column
  padding: 0
  border-radius: $border_radius_big

  .TopSection
    padding: $space_normal
    border-bottom: 1px solid #E2E8F0
    position: relative
    overflow: hidden

    .Title
      font-size: $font_large
      font-weight: $font_weight_semibold
    
    .Link
      font-size: $font_small

    .Image
      position: absolute
      top: -$space_tiny
      right: -$space_tiny
      height: 100%
      width: 75px

      *
        height: 100%
        object-fit: contain

